# Practice_Mids

./: CMakeLists.txt  Linked_List Problems.c
Linked_List Problems/: concatenate_two_linked_lists.c  count_even_nodes.c  delete_duplicate_nodes.c  double_node.h  node.h  queue_using_linked_list.c  reverse_data_of_linked_list.c  shuffle_merge_two_linked_lists.c  sort_linked_list_data.c  stack_using_linked_list.c
Linked_List Problems/Add two polynomials/: add_two_polynomials.c  poly_node.h  pseudocode.txt
Stack_Problems/parenthesis_balance_checker/: parenthesis_balance_checker.c
Stack_Problems/reverse_string_using_stack/: reverse_string.c  stack_questions_geeksforgeeks.c
Stack_Problems/two_stacks_in_one_array/: two_stacks_in_one_array.c
